--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
+}
+.header{
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
+  padding: 10px;
+  font-size: 25px;
+  font-weight: bold;
+  box-shadow: 0 3px 6px 0 #555;
+}
+.title{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 30px;
+}
+#movieImage{
+  width: 48px;
+  height: 48px;
+  margin: 15px;
+}
+.search-container{
+  display: flex;
+  justify-content:space-around;
+  flex-direction: row;
+  padding: 10px 10px;
+  border-radius: 6px;
+  margin-left: 20px;
+  width: 300px;
+  background-color: white;
+}
+.inpt{
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  margin-left: 15px;
+  width: 300px;
+}
+.inpt:focus{
+  border:2px solid blue;
+  border-radius: 7px;
+}
+#searchIcon{
+  width: 32px;
+  height: 32px;
+}
+.movie-container{
+  width: auto;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 30px;
+  gap: 25px;
+  justify-content: space-evenly; ;
+}
+.divMAin{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
+}
+.btn{
+  padding: 5px;
+  margin:5px;
+  width: 40px;
+  height: 40px;
+cursor: pointer;
+}
+.btn:hover{
+  background-color: lightblue;
+}
+.btn-cont{
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: lightgreen;
+}
+
+.srt-btn{
+  margin: 5px;
+  width: 100px;
+  height: 30px;
+  border-radius: 10px;
+  background-color: black;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.srt-btn:hover{
+  background-color: lightblue;
+  color: black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sort{
+  font-size: 30px;
+  color: black;
 }
